Fix test failures on Java 17